--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -23,7 +23,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
+
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -59,10 +59,11 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
+  /* text-align: center; */
+  /* padding: 0; */
 }
 
 @media (prefers-color-scheme: light) {
