--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -59,11 +59,11 @@ button:focus-visible {
 }
 
 #app {
-  /* max-width: 1280px; */
-  /* margin: 0 auto; */
-  /* padding: 2rem; */
-  /* text-align: center; */
-  /* padding: 0; */
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: light) {
